Removed round corners on svg div - Chrome has a bug that ruins how scrollbars work if you put an svg inside a div _with rounded corners_

--- a/xm8-server/frontend/sass/matrixsvg.scss
+++ b/xm8-server/frontend/sass/matrixsvg.scss
@@ -1,9 +1,19 @@
-.matrixSvg {
-
+.matrixSvgContainer {
   margin-top: 10px;
-  background: rgba(240, 240, 240, .05);
-  border-radius: 15px;
+  overflow: auto;
   box-shadow: inset 0 2px 10px rgba(0,0,0,0.5);
+  background: rgba(240, 240, 240, .05);
+
+  margin-left: 0px; 
+  margin-right: 0px;
+  height: 500px;
+ 
+}
+
+.matrixSvg {
+ 
+  height: 1000px;
+  width: 1000px;
 
   .node {
     .nodebox {
